--- a/Stebet.Nats.DistributedCache/Stebet.Nats.DistributedCache.csproj
+++ b/Stebet.Nats.DistributedCache/Stebet.Nats.DistributedCache.csproj
@@ -1,15 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.3" />
-    <PackageReference Include="NATS.Client.KeyValueStore" Version="2.6.0-preview.2" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Options" />
+    <PackageReference Include="NATS.Client.KeyValueStore" />
   </ItemGroup>
-
 </Project>
