--- a/Stebet.Nats.DistributedCache/Stebet.Nats.DistributedCache.csproj
+++ b/Stebet.Nats.DistributedCache/Stebet.Nats.DistributedCache.csproj
@@ -1,4 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<PackageLicenseFile>../License.txt</PackageLicenseFile>
+		<PackageProjectUrl>https://github.com/stebet/Stebet.Nats.DistributedCache</PackageProjectUrl>
+		<PackageOutputPath>./nupkg</PackageOutputPath>
+	</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Options" />
