--- a/src/Stebet.Nats.DistributedCache/Stebet.Nats.DistributedCache.csproj
+++ b/src/Stebet.Nats.DistributedCache/Stebet.Nats.DistributedCache.csproj
@@ -3,10 +3,14 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/stebet/Stebet.Nats.DistributedCache</PackageProjectUrl>
 		<PackageOutputPath>./nupkg</PackageOutputPath>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Options" />
     <PackageReference Include="NATS.Client.KeyValueStore" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 </Project>
