--- a/.github/workflows/DotnetTest.yml
+++ b/.github/workflows/DotnetTest.yml
@@ -6,11 +6,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     services:
-      redis:
+      nats:
         # Docker Hub image
         image: synadia/nats-server:nightly
         ports:
           - 4222:4222
+        volumes:
+          - ./tests/nats/:/etc/nats
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET 8
