--- a/.github/workflows/DotnetTest.yml
+++ b/.github/workflows/DotnetTest.yml
@@ -15,6 +15,8 @@ jobs:
           - ./tests/nats/:/etc/nats
     steps:
     - uses: actions/checkout@v3
+      with:
+        clean: false
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v3
       with:
