--- a/.github/workflows/DotnetTest.yml
+++ b/.github/workflows/DotnetTest.yml
@@ -5,18 +5,10 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    services:
-      nats:
-        # Docker Hub image
-        image: synadia/nats-server:nightly
-        ports:
-          - 4222:4222
-        volumes:
-          - ./tests/nats/:/etc/nats
     steps:
     - uses: actions/checkout@v3
-      with:
-        clean: false
+    - name: Start NATS container
+      run: docker run --network ${{ job.container.network }} -d synadia/nats-server:nightly -js
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v3
       with:
