--- a/.github/workflows/DotnetTest.yml
+++ b/.github/workflows/DotnetTest.yml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Start NATS container
