--- a/.github/workflows/DotnetTest.yml
+++ b/.github/workflows/DotnetTest.yml
@@ -8,6 +8,8 @@ jobs:
     container: ubuntu
     steps:
     - uses: actions/checkout@v3
+    - name: Set up Docker
+      uses: docker/setup-docker-action@v4
     - name: Start NATS container
       run: docker run --network ${{ job.container.network }} -d synadia/nats-server:nightly -js
     - name: Setup .NET 8
