--- a/.github/workflows/DotnetTest.yml
+++ b/.github/workflows/DotnetTest.yml
@@ -1,17 +1,16 @@
 name: Build & Test
 
 on: [push]
-
 jobs:
   build:
+    services:
+      nats:
+        image: stebet/nats-js:latest
+        ports:
+          - 4222:4222
     runs-on: ubuntu-latest
-    container: ubuntu
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Docker
-      uses: docker/setup-docker-action@v4
-    - name: Start NATS container
-      run: docker run --network ${{ job.container.network }} -d synadia/nats-server:nightly -js
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v3
       with:
