--- a/.github/workflows/DotnetTest.yml
+++ b/.github/workflows/DotnetTest.yml
@@ -15,6 +15,10 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 9.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
