--- a/.github/workflows/DotnetTest.yml
+++ b/.github/workflows/DotnetTest.yml
@@ -24,4 +24,8 @@ jobs:
     - name: Build
       run: dotnet build --no-restore /p:ContinuousIntegrationBuild=true
     - name: Test
-      run: dotnet test --no-build
+      run: dotnet test --no-build --collect:"XPlat Code Coverage" --settings Default.runsettings
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
