--- a/tests/Stebet.Nats.DistributedCache.Tests/Stebet.Nats.DistributedCache.Tests.csproj
+++ b/tests/Stebet.Nats.DistributedCache.Tests/Stebet.Nats.DistributedCache.Tests.csproj
@@ -4,6 +4,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="coverlet.collector">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
