--- a/.github/workflows/DotnetTest.yml
+++ b/.github/workflows/DotnetTest.yml
@@ -19,12 +19,8 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 9.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore /p:ContinuousIntegrationBuild=true
     - name: Test
-      run: dotnet test --no-build --collect:"XPlat Code Coverage" --settings Default.runsettings
+      run: dotnet test --configuration Release --collect:"XPlat Code Coverage" --settings Default.runsettings
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.0.1
       with:
